--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="chat-container">
     <div id="chat-log"></div>
     <input type="text" id="user-input" placeholder="Speak to Nexus..." />
-    <button id="send-button">Send</button>
+    <button onclick="sendMessage()">Send</button>
   </div>
 
   <script src="nexus.js"></script>
